<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2026 Ishan
  ~ Android Port component of mGBA.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3.
  ~
  ~ This program is distributed without any warranty. See the GNU General Public License for more details.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:id="@+id/no_results_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_no_results"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_search" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/empty_list_text"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/search"
                tools:visibility="visible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grid_games_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_background"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardCornerRadius="28dp">

            <LinearLayout
                android:id="@+id/search_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="56dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/search"
                    android:src="@drawable/ic_search"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="flagNoFullscreen" />

            </LinearLayout>

            <ImageView
                android:id="@+id/clear_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_close"
                android:visibility="invisible"
                app:tint="?attr/colorOnSurfaceVariant"
                tools:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_search">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingVertical="4dp"
            app:chipSpacingHorizontal="12dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAllGames"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all_games" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRecentlyPlayed"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/recently_played" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFavorites"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/favorites" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>